[package]
name = "xdb"
version = "0.1.0"
edition = "2021"
description = "A lightweight, fast embedded key-value store inspired by RocksDB, written in pure Rust"
license = "MIT OR Apache-2.0"
readme = "../DOC.md"

[dependencies]
crc32fast = "1"
thiserror = "2"
parking_lot = "0.12"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
rand = "0.9"
log = "0.4"

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"

[features]
default = []
