[package]
name = "xdb"
version = "0.1.0"
edition = "2021"
description = "A lightweight, fast embedded key-value store inspired by RocksDB, written in pure Rust"
license = "MIT OR Apache-2.0"
readme = "../DOC.md"

[dependencies]
crc32fast = "1"
thiserror = "2"
parking_lot = "0.12"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
log = "0.4"
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true, features = ["zstdmt"] }

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
lz4 = ["lz4_flex"]
zstd = ["dep:zstd"]
compression = ["lz4", "zstd"]

[[bench]]
name = "benchmarks"
harness = false
