[package]
name = "xdb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
xdb = { path = ".." }
tempfile = "3"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_wal_reader"
path = "fuzz_targets/fuzz_wal_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sst_reader"
path = "fuzz_targets/fuzz_sst_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_version_edit"
path = "fuzz_targets/fuzz_version_edit.rs"
test = false
doc = false

[[bin]]
name = "fuzz_write_batch"
path = "fuzz_targets/fuzz_write_batch.rs"
test = false
doc = false
